salesforce-classic-Feature-IN-955/src/objects/Service_Custom_Field__c.object
<CustomObject>
    <label>Service Custom Field</label>
    <nameField>
        <label>Service Custom Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Custom Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>eid__c</fullName>
        <label>Gotransverse Eid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <label>OpportunityID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentId__c</fullName>
        <label>Gotransverse ParentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductEidMap__c</fullName>
        <externalId>true</externalId>
        <label>Gotransverse ProductEidMap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <externalId>true</externalId>
        <label>Gotransverse Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Gotransverse Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>